# ocaml-dataframe

./: .travis.yml  README.md  dataframe.opam
examples/: basics.ml  dune
lib/: column.ml  column.mli  dataframe.ml  df.ml  df.mli  dune  filter.ml  native_array.ml  native_array.mli
lib_test/: df_tests.ml  dune
src/dataframe/: array_intf.ml  bool_array.ml  bool_array.mli  column.ml  column.mli  dataframe.ml  df.ml  df.mli  df_csv.ml  df_csv.mli  dune  native_array.ml  native_array.mli
src/tests/: bool_array_tests.ml  csv_tests.ml  df_tests.ml  dune
