opam-version: "2.0"
name:         "dataframe"
bug-reports:  "https://github.com/LaurentMazare/ocaml-dataframe/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-dataframe"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-dataframe.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "base" {>= "0.12.0"}
  "csv"
  "dune" {>= "1.3.0" build}
  "ocaml" {>= "4.06"}
  "ocaml-compiler-libs"
  "ppx_expect"
  "ppx_let"
  "stdio"
]

depopts: [
]

conflicts: [
]

synopsis: "A simple and type-safe dataframe api in pure ocaml."
description: """
A simple and (reasonably) type-safe dataframe api in pure ocaml.
"""
